--- a/python/240615/base.ipynb
+++ b/python/240615/base.ipynb
@@ -505,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if tuple_y:\n",
+    "if tuple_x:\n",
     "    # tuple_x에 원소가 1개 이상인 경우\n",
     "    print('tuple에 데이터가 존재')\n",
     "else:\n",
@@ -974,9 +974,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "list_a = [2, 4, 6, 7]\n",
     "for i in list_a:\n",
@@ -985,9 +996,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, len(list_a), 1):\n",
     "    print(list_a[i])"
@@ -995,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,18 +1035,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 15, 20, 15, 50]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_b.count(15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_b.index(15)"
    ]
@@ -1100,23 +1164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 4\n",
-      "2 3\n",
-      "3 2\n",
-      "4 1\n",
-      "4 6\n",
-      "5 5\n",
-      "6 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 첫 번째 반복문을 생성 (1부터 6까지 반복 실행)\n",
     "for i in range(1, 7, 1):\n",
