--- a/python/240622/function.ipynb
+++ b/python/240622/function.ipynb
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,12 +988,147 @@
     "# 매개변수 : 가변 인자값을 담을수 있는 1개의 매개변수\n",
     "\n",
     "# 함수(mean_c2)를 선언\n",
-    "\n",
+    "def mean_c2(*args):\n",
     "    # 가변으로 들어온 인자값들의 합계를 변수에 대입 \n",
-    "\n",
+    "    # case1\n",
+    "    # result = sum_c(args)\n",
+    "    # case2\n",
+    "    # result = 0\n",
+    "    # for i in args:\n",
+    "    #     # i는 args의 원소들 하나씩 대입\n",
+    "    #     resutl += i\n",
+    "    # case3\n",
+    "    result = 0\n",
+    "    for i in range(0, len(args), 1):\n",
+    "        # i는 args의 위치 값\n",
+    "        result += args[i]\n",
     "    # 합계 / 인자의 개수의 결과는 변수에 대입 \n",
-    "\n",
-    "    # 평균 결과를 되돌려준다. "
+    "    mean_result = result / len(args)\n",
+    "    # 평균 결과를 되돌려준다. \n",
+    "    return mean_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mean_c2(1,2,3,4,5,6,7,8,9,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 외부의 모듈을 로드 \n",
+    "# 외부의 py파일을 로드하여 해당 파일에 있는 변수와 함수, 클래스를 사용\n",
+    "# import 모듈의 이름\n",
+    "import mod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'mod' from 'd:\\\\python\\\\ezen_2406\\\\python\\\\240622\\\\mod.py'>"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 모듈 리로드\n",
+    "import importlib\n",
+    "importlib.reload(mod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n",
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모듈(mod) 안에(.) 있는 변수(x | y)를 호출 \n",
+    "print(mod.x)\n",
+    "print(mod.y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모듈 안에 있는 함수를 호출 \n",
+    "print(mod.func_1(10, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1728\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mod.func_1(10, 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2401\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mod.func_1(_z = 4, _x = 5, _y = 2))"
    ]
   },
   {
@@ -1001,9 +1136,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(mean_c2(1,2,3,4,5,6,7,8,9,10))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
