--- a/python/240622/class.ipynb
+++ b/python/240622/class.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,8 +307,210 @@
     "        self.name = _name\n",
     "        self.age = _age\n",
     "        self.phone = _phone\n",
-    "        self.balance = _balance"
+    "        self.balance = _balance\n",
+    "\n",
+    "    # 일을 한다 함수를 생성 : 일의 종류 매개변수로 생성\n",
+    "    def work(self, _type):\n",
+    "        # 일의 타입에 따라 증가 금액이 변경 \n",
+    "        # 일의 종류 (서빙(150000증가), 편의점(100000증가), 막노동(200000증가))\n",
+    "        if _type == \"서빙\":\n",
+    "            # 잔고를 150000 증가\n",
+    "            self.balance += 150000\n",
+    "        elif _type == '편의점':\n",
+    "            self.balace += 100000\n",
+    "        elif _type == '막노동':\n",
+    "            self.balance += 200000\n",
+    "        else:\n",
+    "            return \"등록되지 않은 일의 타입입니다.\"\n",
+    "\n",
+    "        return f\"{_type}의 일을 완료하였습니다. 현재 지갑의 잔액은 {self.balance}입니다.\"\n",
+    "    \n",
+    "    # 소비하는 함수를 생성 \n",
+    "    # 물건의 종류에 따라 잔고가 감소 \n",
+    "    # 제육 : 8200원 감소 \n",
+    "    # 아이패드 : 1000000원 감소\n",
+    "    # 로봇청소기 : 890000원 감소\n",
+    "    def flex(self, _type):\n",
+    "        # 구매하려는 물품의 가격보다 잔고가 크거나 같아야 구매 완료\n",
+    "        if _type == \"제육볶음\":\n",
+    "            price = 8200\n",
+    "        elif _type == '아이패드':\n",
+    "            price = 1000000\n",
+    "        elif _type == \"로봇청소기\":\n",
+    "            price = 890000\n",
+    "        else : \n",
+    "            return \"등록되지 않은 물건입니다.\"\n",
+    "        # 구매하려는 물건의 가격보다 잔액이 크거나 같다면 이라는 조건식 생성\n",
+    "        if self.balance >= price:\n",
+    "            # 구매 \n",
+    "            self.balance -= price\n",
+    "            return f\"{_type} 물건 구매 완료. 현재 지갑의 잔고는 {self.balance}입니다.\"\n",
+    "        else:\n",
+    "            return f\"{_type} 물건 구매 실패. 부족한 잔액은 {price - self.balance}입니다.\"\n",
+    "    # 지갑의 현재 잔액을 확인하는 함수를 생성 \n",
+    "    def info(self):\n",
+    "        return f\"지갑 소유자의 이름은 {self.name}이고 휴대폰번호는 {self.phone}입니다. 현재 잔고는 {self.balance}입니다.\"\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wallet class 생성 \n",
+    "user1 = Wallet('kim', 30, '01012345678')\n",
+    "user2 = Wallet('park', 40, '01098765432', 1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'서빙의 일을 완료하였습니다. 현재 지갑의 잔액은 150000입니다.'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# user1이 work  함수를 실행\n",
+    "user1.work('서빙')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "지갑 소유자의 이름은 kim이고 휴대폰번호는 01012345678입니다. 현재 잔고는 150000입니다.\n",
+      "지갑 소유자의 이름은 park이고 휴대폰번호는 01098765432입니다. 현재 잔고는 1000000입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# user1과 user2의 지갑의 정보를 출력 \n",
+    "print(user1.info())\n",
+    "print(user2.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'제육볶음 물건 구매 완료. 현재 지갑의 잔고는 141800입니다.'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user1.flex('제육볶음')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'로봇청소기 물건 구매 실패. 부족한 잔액은 748200입니다.'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user1.flex('로봇청소기')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'막노동의 일을 완료하였습니다. 현재 지갑의 잔액은 1141800입니다.'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user1.work('막노동')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'로봇청소기 물건 구매 완료. 현재 지갑의 잔고는 251800입니다.'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user1.flex('로봇청소기')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'아이패드 물건 구매 완료. 현재 지갑의 잔고는 0입니다.'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user2.flex('아이패드')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
