--- a/python/240629/01_pandas.ipynb
+++ b/python/240629/01_pandas.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +906,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corona.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corona.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 일일사망자에 음수 데이터가 존재한다?\n",
+    "# 일일사망자가 음수인 데이터만 확인 \n",
+    "# 인덱스 조건 :  일일사망자가 음수인 \n",
+    "flag = corona['일일사망자'] < 0\n",
+    "corona.loc[flag]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 음수인 데이터는 인덱스가 446번이다 \n",
+    "# 인덱스가 444부터 448까지의 데이터를 출력 \n",
+    "corona.loc[444:448]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 인덱스 445의 등록일시가 잘못되어있다. \n",
+    "# 2021-05-30 00:00:00.0 데이터를 2021-05-31 00:00:00.000으로 변경\n",
+    "corona.loc[445, '등록일시'] = '2021-05-31 00:00:00.000'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corona.loc[444:448]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 복습 \n",
+    "1. 등록일시를 기준으로 오름차순 정렬\n",
+    "2. 인덱스를 초기화하고 기존의 인덱스는 제거 \n",
+    "3. '일일사망자', '총사망자2', '일일사망자3' 컬럼을 제거 \n",
+    "4. '일일사망자' 컬럼을 생성하고 shift()함수를 이용하여 '총사망자'의 데이터에서 전 행의 데이터와의 차이값을 대입 (결측치는 0으로 대체)\n",
+    "5. '일일확진자' 컬럼을 생성하고 diff()함수를 이용하여 '총확진자'의 데이터에서 전 행의 데이터와의 차이값을 대입 (결측치는 0으로 대체)\n",
+    "6. 일일사망자와 일일확진자에 음수의 데이터가 존재하는가 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 등록일시를 기준으로 오름차순 정렬 \n",
+    "corona.sort_values(['등록일시'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 인덱스를 초기화하고 기존의 인덱스는 제거 \n",
+    "corona.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 특정컬럼을 제거 (해당 컬럼을 제외한 나머지 컬럼을 확인)\n",
+    "corona.drop(['일일사망자', '총사망자2', '일일사망자3'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corona.loc[:, '등록일시' : '누적확진율']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corona.iloc[:, :8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 일일사망자 컬럼을 생성하고 총사망자 컬럼의 데이터의 차이를 대입\n",
+    "corona['일일사망자'] = (corona['총사망자'] - corona['총사망자'].shift(1)).fillna(0)\n",
+    "corona.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 일일확진자 컬럼을 생성하고 총확진자 컬럼의 데이터의 차이를 대입 \n",
+    "corona['일일확진자'] = corona['총확진자'].diff(1).fillna(0)\n",
+    "corona.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -930,117 +1075,293 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>등록일시</th>\n",
        "      <th>총사망자</th>\n",
        "      <th>총확진자</th>\n",
        "      <th>기준일</th>\n",
-       "      <th>기준시간</th>\n",
-       "      <th>수정일시</th>\n",
        "      <th>누적의심자</th>\n",
        "      <th>누적확진율</th>\n",
        "      <th>일일사망자</th>\n",
-       "      <th>총사망자2</th>\n",
-       "      <th>일일사망자3</th>\n",
+       "      <th>일일확진자</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-03-10 00:00:00.000</td>\n",
-       "      <td>54</td>\n",
-       "      <td>7513</td>\n",
-       "      <td>20200310</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>2021-10-07 10:30:51.51</td>\n",
-       "      <td>210144.0</td>\n",
+       "      <th>count</th>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>8.200000e+02</td>\n",
+       "      <td>8.200000e+02</td>\n",
+       "      <td>6.920000e+02</td>\n",
+       "      <td>623.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3927.832927</td>\n",
+       "      <td>1.913097e+06</td>\n",
+       "      <td>2.020897e+07</td>\n",
+       "      <td>7.545057e+06</td>\n",
+       "      <td>1.556435</td>\n",
+       "      <td>29.574390</td>\n",
+       "      <td>22171.569512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6164.310693</td>\n",
+       "      <td>4.857030e+06</td>\n",
+       "      <td>7.118265e+03</td>\n",
+       "      <td>6.172020e+06</td>\n",
+       "      <td>0.543014</td>\n",
+       "      <td>68.530435</td>\n",
+       "      <td>71013.844067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>7.513000e+03</td>\n",
+       "      <td>2.020031e+07</td>\n",
+       "      <td>2.101440e+05</td>\n",
+       "      <td>0.902205</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>415.750000</td>\n",
+       "      <td>2.393525e+04</td>\n",
+       "      <td>2.020100e+07</td>\n",
+       "      <td>1.934309e+06</td>\n",
+       "      <td>1.078089</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>125.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1812.500000</td>\n",
+       "      <td>1.185640e+05</td>\n",
+       "      <td>2.021042e+07</td>\n",
+       "      <td>6.368310e+06</td>\n",
+       "      <td>1.416159</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>634.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3120.500000</td>\n",
+       "      <td>3.979915e+05</td>\n",
+       "      <td>2.021112e+07</td>\n",
+       "      <td>1.216890e+07</td>\n",
+       "      <td>1.816009</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>2782.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>24305.000000</td>\n",
+       "      <td>1.818820e+07</td>\n",
+       "      <td>2.022061e+07</td>\n",
+       "      <td>2.151807e+07</td>\n",
        "      <td>3.919308</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-03-11 00:00:00.000</td>\n",
-       "      <td>60</td>\n",
-       "      <td>7755</td>\n",
-       "      <td>20200311</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>2021-10-07 10:30:51.51</td>\n",
-       "      <td>222395.0</td>\n",
-       "      <td>3.804175</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-03-12 00:00:00.000</td>\n",
-       "      <td>66</td>\n",
-       "      <td>7869</td>\n",
-       "      <td>20200312</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>2021-10-07 10:30:51.51</td>\n",
-       "      <td>234998.0</td>\n",
-       "      <td>3.621744</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-03-13 00:00:00.000</td>\n",
-       "      <td>67</td>\n",
-       "      <td>7979</td>\n",
-       "      <td>20200313</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>2021-10-07 10:30:51.51</td>\n",
-       "      <td>248647.0</td>\n",
-       "      <td>3.458499</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-03-14 00:00:00.000</td>\n",
-       "      <td>72</td>\n",
-       "      <td>8086</td>\n",
-       "      <td>20200314</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>2021-10-07 10:30:51.51</td>\n",
-       "      <td>261335.0</td>\n",
-       "      <td>3.318000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>469.000000</td>\n",
+       "      <td>621204.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      등록일시  총사망자  총확진자       기준일   기준시간  \\\n",
-       "0  2020-03-10 00:00:00.000    54  7513  20200310  00:00   \n",
-       "1  2020-03-11 00:00:00.000    60  7755  20200311  00:00   \n",
-       "2  2020-03-12 00:00:00.000    66  7869  20200312  00:00   \n",
-       "3  2020-03-13 00:00:00.000    67  7979  20200313  00:00   \n",
-       "4  2020-03-14 00:00:00.000    72  8086  20200314  00:00   \n",
+       "               총사망자          총확진자           기준일         누적의심자       누적확진율  \\\n",
+       "count    820.000000  8.200000e+02  8.200000e+02  6.920000e+02  623.000000   \n",
+       "mean    3927.832927  1.913097e+06  2.020897e+07  7.545057e+06    1.556435   \n",
+       "std     6164.310693  4.857030e+06  7.118265e+03  6.172020e+06    0.543014   \n",
+       "min       54.000000  7.513000e+03  2.020031e+07  2.101440e+05    0.902205   \n",
+       "25%      415.750000  2.393525e+04  2.020100e+07  1.934309e+06    1.078089   \n",
+       "50%     1812.500000  1.185640e+05  2.021042e+07  6.368310e+06    1.416159   \n",
+       "75%     3120.500000  3.979915e+05  2.021112e+07  1.216890e+07    1.816009   \n",
+       "max    24305.000000  1.818820e+07  2.022061e+07  2.151807e+07    3.919308   \n",
        "\n",
-       "                     수정일시     누적의심자     누적확진율  일일사망자  총사망자2  일일사망자3  \n",
-       "0  2021-10-07 10:30:51.51  210144.0  3.919308      0    0.0     0.0  \n",
-       "1  2021-10-07 10:30:51.51  222395.0  3.804175      6    6.0     6.0  \n",
-       "2  2021-10-07 10:30:51.51  234998.0  3.621744      6    6.0     6.0  \n",
-       "3  2021-10-07 10:30:51.51  248647.0  3.458499      1    1.0     1.0  \n",
-       "4  2021-10-07 10:30:51.51  261335.0  3.318000      5    5.0     5.0  "
+       "            일일사망자          일일확진자  \n",
+       "count  820.000000     820.000000  \n",
+       "mean    29.574390   22171.569512  \n",
+       "std     68.530435   71013.844067  \n",
+       "min      0.000000       0.000000  \n",
+       "25%      2.000000     125.000000  \n",
+       "50%      5.000000     634.000000  \n",
+       "75%     20.000000    2782.750000  \n",
+       "max    469.000000  621204.000000  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corona.head()"
+    "# 일일사망자, 일일확진자 컬럼에 음수가 존재하는가?\n",
+    "corona.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 특수 함수 \n",
+    "- map()\n",
+    "    - 1차원 데이터를 각 원소들을 변환 사용 \n",
+    "    - python 기본함수 \n",
+    "        - list( map( 함수명, 1차원리스트 ) )\n",
+    "    - Series 내장함수 \n",
+    "        - Series명.map(함수명)\n",
+    "- lambda 함수\n",
+    "    - 일반적인 함수는 함수를 선언, 함수를 호출로 작업이 나눠져있다. \n",
+    "    - 함수를 선언함과 동시에 호출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# python에 기본함수 map \n",
+    "\n",
+    "# 일반함수를 선언\n",
+    "def change(x):\n",
+    "    result = x ** 2\n",
+    "    return result\n",
+    "# 1차원 리스트를 생성\n",
+    "_list = [1,2,3,4,5]\n",
+    "\n",
+    "# map 함수 \n",
+    "list(\n",
+    "    map(\n",
+    "        change, \n",
+    "        _list\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_list = [1,2,3,4,5]\n",
+    "\n",
+    "list(\n",
+    "    map(\n",
+    "        lambda x : x ** 2, \n",
+    "        _list\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# series에 내장된 map()함수 \n",
+    "corona_30 = corona.tail(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 일일사망자가 25명 미만이면 low, 25명 이상이면 high\n",
+    "# map + 일반함수 \n",
+    "def change(x):\n",
+    "    # x가 25 이상인가?\n",
+    "    if x >= 25:\n",
+    "        result = 'high'\n",
+    "    else:\n",
+    "        result = 'low'\n",
+    "    return result\n",
+    "\n",
+    "corona_30['일일사망자'].map(\n",
+    "    change\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "790    high\n",
+       "791    high\n",
+       "792    high\n",
+       "793    high\n",
+       "794    high\n",
+       "795    high\n",
+       "796    high\n",
+       "797    high\n",
+       "798    high\n",
+       "799    high\n",
+       "800    high\n",
+       "801    high\n",
+       "802    high\n",
+       "803     low\n",
+       "804     low\n",
+       "805     low\n",
+       "806    high\n",
+       "807    high\n",
+       "808    high\n",
+       "809     low\n",
+       "810     low\n",
+       "811     low\n",
+       "812     low\n",
+       "813     low\n",
+       "814     low\n",
+       "815     low\n",
+       "816     low\n",
+       "817     low\n",
+       "818     low\n",
+       "819     low\n",
+       "Name: 일일사망자, dtype: object"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# map + lambda\n",
+    "# if문을 한줄로 작성하는 방법 : '참인경우 데이터' if 조건식 else '거짓인 경우 데이터'\n",
+    "corona_30['일일사망자'].map(\n",
+    "    lambda x : 'high' if x >= 25 else 'low'\n",
+    ")"
    ]
   }
  ],
